--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   <head>Mr. Meows</head>
   <style>
     body {
-      background-image:http://randomghost.tumblr.com/post/119408309307/tinhan123-it-can-feel-weird-to-live-the-life-of;
+      background-image: url("http://randomghost.tumblr.com/post/119408309307/tinhan123-it-can-feel-weird-to-live-the-life-of");
     }
   </style>
 </html>
