--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   <head>Mr. Meows</head>
   <style>
     body {
-      background-image: url("http://randomghost.tumblr.com/post/119408309307/tinhan123-it-can-feel-weird-to-live-the-life-of");
+      background-image: url("http://40.media.tumblr.com/54b5e64e43cee9f92c47c02a2ac46d16/tumblr_no89ppCLcw1qgrqdko1_1280.png");
     }
   </style>
 </html>
