--- a/index.html
+++ b/index.html
@@ -1,5 +1,13 @@
 <html>
-  <head>Mr. Meows</head>
+  h1 {
+	font-family: 'Lucida Console', 'Lucida Sans Typewriter', monaco, 'Bitstream Vera Sans Mono', monospace;
+	font-size: 24px;
+	font-style: normal;
+	font-variant: normal;
+	font-weight: 500;
+	line-height: 26.3999996185303px;
+}
+  <head><h1>Mr. Meows wishes humans a safe journey</h1></head>
   <style>
     body {
       background-image: url("http://40.media.tumblr.com/54b5e64e43cee9f92c47c02a2ac46d16/tumblr_no89ppCLcw1qgrqdko1_1280.png");
