--- a/index.html
+++ b/index.html
@@ -6,11 +6,13 @@
 	font-variant: normal;
 	font-weight: 500;
 	line-height: 26.3999996185303px;
+
+<head><h1>Mr. Meows wishes humans a safe journey</h1></head>
+
 }
-  <head><h1>Mr. Meows wishes humans a safe journey</h1></head>
   <style>
     body {
-      background-image: url("http://40.media.tumblr.com/54b5e64e43cee9f92c47c02a2ac46d16/tumblr_no89ppCLcw1qgrqdko1_1280.png");
+      background-clip: url("http://40.media.tumblr.com/54b5e64e43cee9f92c47c02a2ac46d16/tumblr_no89ppCLcw1qgrqdko1_1280.png");
     }
   </style>
 </html>
