--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
 	<style>  h1 {
+	text-align: center;	
 	font-family: 'Lucida Console', 'Lucida Sans Typewriter', monaco, 'Bitstream Vera Sans Mono', monospace;
 	font-size: 24px;
 	font-style: normal;
