--- a/index.html
+++ b/index.html
@@ -6,13 +6,14 @@
 	font-style: normal;
 	font-variant: normal;
 	font-weight: 500;
-	line-height: 26.3999996185303px;</style>
-}
+	line-height: 26.3999996185303px;
+	}
+	</style>
 
 <head><h1>Mr. Meows wishes humans a safe journey</h1></head>
   <style>
     body {
-      background-clip: url("http://40.media.tumblr.com/54b5e64e43cee9f92c47c02a2ac46d16/tumblr_no89ppCLcw1qgrqdko1_1280.png");
+      background-image: url("http://www.psdgraphics.com/file/colorful-triangles-background.jpg");
     }
   </style>
 </html>
