--- a/index.html
+++ b/index.html
@@ -1,16 +1,15 @@
 <html>
 	<style>  h1 {
-	text-align: center;	
 	font-family: 'Lucida Console', 'Lucida Sans Typewriter', monaco, 'Bitstream Vera Sans Mono', monospace;
 	font-size: 24px;
 	font-style: normal;
-	font-variant: normal;
+	font-variant: small-caps;
 	font-weight: 500;
-	line-height: 26.3999996185303px;
+	line-height: 36px;
 	}
 	</style>
 
-<head><h1>Mr. Meows wishes humans a safe journey</h1></head>
+<head><h1>wishing humans a safe journey</h1></head>
   <style>
     body {
       background-image: url("http://www.psdgraphics.com/file/colorful-triangles-background.jpg");
