--- a/index.html
+++ b/index.html
@@ -9,10 +9,5 @@
 	}
 	</style>
 
-<head><h1>wishing humans a safe journey</h1></head>
-  <style>
-    body {
-      background-image: url("http://www.psdgraphics.com/file/colorful-triangles-background.jpg");
-    }
-  </style>
+<head><center><h1>wishing humans a safe journey</h1></center></head>
 </html>
