--- a/index.html
+++ b/index.html
@@ -8,6 +8,14 @@
 	line-height: 36px;
 	}
 	</style>
-
 <head><center><h1>wishing humans a safe journey</h1></center></head>
+<style>
+
+IMG.displayed {
+    display: block;
+    margin-left: auto;
+    margin-right: auto }
+<IMG class="displayed" src="https://www.dropbox.com/s/8zzjl698gx63vwi/sit.jpg?dl=0" alt="">
+
+</style>
 </html>
