--- a/index.html
+++ b/index.html
@@ -9,13 +9,14 @@
 	}
 	</style>
 <head><center><h1>wishing humans a safe journey</h1></center></head>
+
 <style>
-
-IMG.displayed {
-    display: block;
-    margin-left: auto;
-    margin-right: auto }
-<IMG class="displayed" src="https://www.dropbox.com/s/8zzjl698gx63vwi/sit.jpg?dl=0" alt="">
-
+body { 
+    background-image: url('https://www.dropbox.com/s/8zzjl698gx63vwi/sit.jpg?dl=0');
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-position: center; 
+}
 </style>
+
 </html>
