--- a/index.html
+++ b/index.html
@@ -9,14 +9,12 @@
 	}
 	</style>
 <head><center><h1>wishing humans a safe journey</h1></center></head>
-
-<style>
-body { 
-    background-image: url('https://www.dropbox.com/s/8zzjl698gx63vwi/sit.jpg?dl=0');
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-    background-position: center; 
-}
-</style>
-
+	<style>
+	body { 
+    	background-image: url('https://photos-5.dropbox.com/t/2/AAA-XwOMSA1cjUoypCwxRFNUBeLP2-SjbONcVL_nczmrKg/12/348056683/jpeg/32x32/1/1442019600/0/2/sit.jpg/COvY-6UBIAEgAiADIAQgBSAGIAcoBw/gMwFl-Zt4YF2dsv-guJBQWrtbli-flg14hXeF8XChWw?size_mode=5');
+    	background-repeat: no-repeat;
+    	background-attachment: fixed;
+    	background-position: center; 
+	}
+	</style>
 </html>
