--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <head><center><h1>wishing humans a safe journey</h1></center></head>
   <style>
 	body { 
-    	background-image: url('https://photos-5.dropbox.com/t/2/AAA-XwOMSA1cjUoypCwxRFNUBeLP2-SjbONcVL_nczmrKg/12/348056683/jpeg/32x32/1/1442019600/0/2/sit.jpg/COvY-6UBIAEgAiADIAQgBSAGIAcoBw/gMwFl-Zt4YF2dsv-guJBQWrtbli-flg14hXeF8XChWw?size_mode=5');
+    	background-image: url('https://photos-6.dropbox.com/t/2/AADdb2REcWa1dTI2Kntv_4_R7ZwjnB5Y6oqOdjT7qsHLnQ/12/348056683/jpeg/32x32/1/_/1/2/sit.jpg/EK72-9wCGOAcIAcoBw/gMwFl-Zt4YF2dsv-guJBQWrtbli-flg14hXeF8XChWw?size=1024x768&size_mode=2');
     	background-repeat: no-repeat;
     	background-attachment: fixed;
     	background-position: center; 
