--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	line-height: 36px;
 	}
   </style>
-    <head><center><h1>wishing humans a safe journey</h1></center></head>
+    <head><center><h1>stripe is sexaay</h1></center></head> <!-- wishing humans a safe journey -->
   <style>
 	body { 
     	background-image: url('https://photos-6.dropbox.com/t/2/AADdb2REcWa1dTI2Kntv_4_R7ZwjnB5Y6oqOdjT7qsHLnQ/12/348056683/jpeg/32x32/1/_/1/2/sit.jpg/EK72-9wCGOAcIAcoBw/gMwFl-Zt4YF2dsv-guJBQWrtbli-flg14hXeF8XChWw?size=1024x768&size_mode=2');
