--- a/resume.html
+++ b/resume.html
@@ -8,7 +8,7 @@
 	font-weight: 500;
 	line-height: 36px;
 	}
-	h2 {
+	p {
 	font-family: 'Lucida Console', 'Lucida Sans Typewriter', monaco, 'Bitstream Vera Sans Mono', monospace;
 	font-size: 12px;
 	font-style: normal;
@@ -22,5 +22,5 @@
     	background-attachment: fixed;
     	background-position: top; 	
   </style>
-  <body><h1>"byron grogan"</h1></body>
+  <head><h1>byron grogan</h1></head>
 </html>
