--- a/resume.html
+++ b/resume.html
@@ -6,7 +6,8 @@
 	font-style: normal;
 	font-variant: small-caps;
 	font-weight: 500;
-	line-height: 36px;
+	line-height: 236px;
+	text-align: center;
 	}
 	p {
 	font-family: 'Lucida Console', 'Lucida Sans Typewriter', monaco, 'Bitstream Vera Sans Mono', monospace;
