--- a/resume.html
+++ b/resume.html
@@ -6,7 +6,7 @@
 	font-style: normal;
 	font-variant: small-caps;
 	font-weight: 500;
-	line-height: 236px;
+	line-height: 36px;
 	text-align: center;
 	}
 	p {
@@ -24,4 +24,7 @@
     	background-position: top; 	
   </style>
   <head><h1>byron grogan</h1></head>
+  <body>
+  	<p>Summary:</p>
+  </body>
 </html>
