--- a/resume.html
+++ b/resume.html
@@ -33,6 +33,7 @@
   </style>
   <head><h1>byron grogan</h1></head>
   <body>
-  	<p>Summary:</p>
+  	<h2>Summary:</h2>
+  		<p>test</p>
   </body>
 </html>
