--- a/resume.html
+++ b/resume.html
@@ -25,15 +25,14 @@
 		font-weight: 500;
 		line-height: 336px;
 	}
-	body {
-    		background-image: url('https://photos-1.dropbox.com/t/2/AADfLN4seiYSRH1WKqA4E_ZA8d61gcnstkReW-Cwas8VeQ/12/348056683/jpeg/32x32/1/_/1/2/norm.jpg/EK72-9wCGP0cIAcoBw/H9pYlmRp8Cet1lc8Yim6lnnCZXr-zxVf6no0VU0OrZI?size=1024x768&size_mode=2');
-    		background-repeat: no-repeat;
-    		background-attachment: fixed;
-    		background-position: top; 	
+	IMG.displayed {
+		display: block;
+    		margin-left: auto;
+    		margin-right: auto
+	}
   </style>
-  <head><h1>byron grogan</h1></head>
-  <body>
-  	<h2>Summary:</h2>
-  		<p>test</p>
-  </body>
+  <head>
+  	<IMG class="displayed" src="https://photos-1.dropbox.com/t/2/AADfLN4seiYSRH1WKqA4E_ZA8d61gcnstkReW-Cwas8VeQ/12/348056683/jpeg/32x32/1/_/1/2/norm.jpg/EK72-9wCGP0cIAcoBw/H9pYlmRp8Cet1lc8Yim6lnnCZXr-zxVf6no0VU0OrZI?size=1024x768&size_mode=2" alt="...">
+  	<h1>BYRON GROGAN</h1>
+  </head>
 </html>
