--- a/resume.html
+++ b/resume.html
@@ -6,7 +6,7 @@
 		font-style: normal;
 		font-variant: small-caps;
 		font-weight: 500;
-		line-height: 236px;
+		line-height: 136px;
 		text-align: center;
 	}
 	h2 {
@@ -15,7 +15,7 @@
 		font-style: normal;
 		font-variant: small-caps;
 		font-weight: 500;
-		line-height: 336px;
+		line-height: 136px;
 	}
 	p {
 		font-family: 'Lucida Console', 'Lucida Sans Typewriter', monaco, 'Bitstream Vera Sans Mono', monospace;
@@ -23,7 +23,7 @@
 		font-style: normal;
 		font-variant: normal;
 		font-weight: 500;
-		line-height: 336px;
+		line-height: 136px;
 	}
 	IMG.displayed {
 		display: block;
@@ -35,4 +35,8 @@
   	<IMG class="displayed" src="https://photos-1.dropbox.com/t/2/AADfLN4seiYSRH1WKqA4E_ZA8d61gcnstkReW-Cwas8VeQ/12/348056683/jpeg/32x32/1/_/1/2/norm.jpg/EK72-9wCGP0cIAcoBw/H9pYlmRp8Cet1lc8Yim6lnnCZXr-zxVf6no0VU0OrZI?size=1024x768&size_mode=2" alt="...">
   	<h1>BYRON GROGAN</h1>
   </head>
+  <body>
+  	<h2>Summary</h2>
+  	<p>test</p>
+  </body>
 </html>
