--- a/resume.html
+++ b/resume.html
@@ -15,15 +15,15 @@
 		font-style: normal;
 		font-variant: small-caps;
 		font-weight: 500;
-		line-height: 36px;
+		line-height: 26px;
 	}
 	p {
 		font-family: 'Lucida Console', 'Lucida Sans Typewriter', monaco, 'Bitstream Vera Sans Mono', monospace;
-		font-size: 18px;
+		font-size: 12px;
 		font-style: normal;
 		font-variant: normal;
 		font-weight: 500;
-		line-height: 36px;
+		line-height: 16px;
 	}
 	IMG.displayed {
 		display: block;
@@ -37,6 +37,6 @@
   </head>
   <body>
   	<h2>Summary</h2>
-  	<p>test</p>
+  	<p>Hello there! I am an adaptable and capable individual seeking a great job! I am highly organised and efficient in prioritising and accomplishing objectives.</p>
   </body>
 </html>
