--- a/resume.html
+++ b/resume.html
@@ -37,6 +37,10 @@
   </head>
   <body>
   	<h2>Summary</h2>
-  	<p>Hello there! I am an adaptable and capable individual seeking a great job! I am highly organised and efficient in prioritising and accomplishing objectives.</p>
+  	<p>Hello there! I am an adaptable and capable individual seeking a great job!
+  	 I am highly organised and efficient in prioritising and accomplishing objectives.
+  	  I enjoy solving complex problems and love collaborative environments (go team!).
+  	   I have outstanding communication skills and can relay information the appropriate format.
+  	    I have an incredibly infectiously positive attitude and great sense of humor.</p>
   </body>
 </html>
