--- a/resume.html
+++ b/resume.html
@@ -25,6 +25,12 @@
 		font-weight: 500;
 		line-height: 16px;
 	}
+	p.ex {
+		margin-top: 100px;
+    		margin-bottom: 100px;
+    		margin-right: 150px;
+    		margin-left: 150px;
+	}
 	IMG.displayed {
 		display: block;
     		margin-left: auto;
@@ -37,6 +43,6 @@
   </head>
   <body>
   	<h2>Summary</h2>
-  	<p>Hello there! I am an adaptable and capable individual seeking a great job! I am highly organised and efficient in prioritising and accomplishing objectives with creativity, enthusiasm and humor. \nI enjoy solving complex problems and love collaborative environments (go team!). I have outstanding communication skills and can relay information the appropriate format. I love learning stuff!</p>
+  	<p class="ex">Hello there! I am an adaptable and capable individual seeking a great job! I am highly organised and efficient in prioritising and accomplishing objectives with creativity, enthusiasm and humor. I enjoy solving complex problems and love collaborative environments (go team!). I have outstanding communication skills and can relay information the appropriate format. I love learning stuff!</p>
   </body>
 </html>
