--- a/resume.html
+++ b/resume.html
@@ -38,7 +38,7 @@
 	}
   </style>
   <head>
-  	<IMG class="displayed" src="https://photos-1.dropbox.com/t/2/AADfLN4seiYSRH1WKqA4E_ZA8d61gcnstkReW-Cwas8VeQ/12/348056683/jpeg/32x32/1/_/1/2/norm.jpg/EK72-9wCGP0cIAcoBw/H9pYlmRp8Cet1lc8Yim6lnnCZXr-zxVf6no0VU0OrZI?size=1024x768&size_mode=2?raw=1" alt="norm">
+  	<IMG class="displayed" src="https://www.dropbox.com/s/njed1oinsllauut/norm.jpg?dl=0?raw=1" alt="norm">
   	<h1>BYRON GROGAN</h1>
   </head>
   <body>
