--- a/resume.html
+++ b/resume.html
@@ -38,7 +38,7 @@
 	}
   </style>
   <head>
-  	<IMG class="displayed" src="https://www.dropbox.com/s/njed1oinsllauut/norm.jpg?dl=0?raw=1" alt="norm">
+  	<IMG class="displayed" src="https://www.dropbox.com/s/njed1oinsllauut/norm.jpg?raw=1" alt="norm">
   	<h1>BYRON GROGAN</h1>
   </head>
   <body>
