--- a/resume.html
+++ b/resume.html
@@ -16,6 +16,18 @@
 		font-variant: small-caps;
 		font-weight: 500;
 		line-height: 26px;
+		margin-right: 150px;
+		margin-left: 150px;
+	}
+	h3 {
+		font-family: 'Lucida Console', 'Lucida Sans Typewriter', monaco, 'Bitstream Vera Sans Mono', monospace;
+		font-size: 14px;
+		font-style: normal;
+		font-variant: small-caps;
+		font-weight: 500;
+		line-height: 26px;
+		margin-right: 150px;
+		margin-left: 150px;
 	}
 	p {
 		font-family: 'Lucida Console', 'Lucida Sans Typewriter', monaco, 'Bitstream Vera Sans Mono', monospace;
@@ -42,7 +54,9 @@
   	<h1>BYRON GROGAN</h1>
   </head>
   <body>
-  	<h2>Summary</h2>
-  	<p class="ex">Hello there! I am an adaptable and capable individual seeking a great job! I am highly organised and efficient in prioritising and accomplishing objectives with creativity, enthusiasm and humor. I enjoy solving complex problems and love collaborative environments (go team!). I have outstanding communication skills and can relay information the appropriate format. I love learning stuff!</p>
+  	<h2>About me</h2>
+  	<p class="ex">Hello there! I am an adaptable and capable individual seeking a great job! I am highly organised and efficient in prioritising and accomplishing objectives with creativity, enthusiasm and humor. I enjoy solving complex problems and love collaborative environments (go team!). I have outstanding communication skills and can relay information in the appropriate format. I love learning stuff!</p>
+  	<h2>Experience</h2>
+  	<h3>Network and System Administrator</h3> 
   </body>
 </html>
