--- a/resume.html
+++ b/resume.html
@@ -21,7 +21,7 @@
 	}
 	h3 {
 		font-family: 'Lucida Console', 'Lucida Sans Typewriter', monaco, 'Bitstream Vera Sans Mono', monospace;
-		font-size: 14px;
+		font-size: 16px;
 		font-style: normal;
 		font-variant: small-caps;
 		font-weight: 500;
@@ -57,6 +57,8 @@
   	<h2>About me</h2>
   	<p class="ex">Hello there! I am an adaptable and capable individual seeking a great job! I am highly organised and efficient in prioritising and accomplishing objectives with creativity, enthusiasm and humor. I enjoy solving complex problems and love collaborative environments (go team!). I have outstanding communication skills and can relay information in the appropriate format. I love learning stuff!</p>
   	<h2>Experience</h2>
-  	<h3>Network and System Administrator</h3> 
+  	<h3>Network and System Administrator</h3>
+  	<p class="ex">Duties:
+  	<p class="ex">Managing and implementing servers - IIS, File-Services, Active Directory-Services, Application-Services [DHCP, DNS, LDAP, VPN].</p>
   </body>
 </html>
