--- a/resume.html
+++ b/resume.html
@@ -59,8 +59,16 @@
   	<h2>Experience</h2>
   	<h3>Network and System Administrator</h3>
   	<p class="ex">Duties:
-  	<p class="ex">Managing and implementing servers - IIS, File-Services, Active Directory-Services, Application-Services [DHCP, DNS, LDAP, VPN]. Ubuntu server: NFS Server, Wireless Access Point. Server Monitoring: SCOM. Scripting. bash, PowerShell. server-side automation tasks. Technical Support: Service management based on impact and priority with cloud-based service management software. Support via email + phone, remote support. Network administration: Cisco routers + switches. LAN protocols and technologies: Ethernet 802.3 [802.1Q, QoS, 802.11] IPsec-based VPN, one-to-one-NAT, port-forwarding, access rules, proxy server. Wireshark, tcpdump, fiddler2. WAN protocols [OSPF, HDLC, EoMPLS] Application support and infrastructure management: patching and deployment. bug fixing. liaising with vendor. Backup and replication: Mainly Veeam Enterprise. SAS and Fibre Channel. Database administration: Mostly implementing MySQL databases. Optimizing queries!</p>
+  	<p class="ex">Managing and implementing servers - IIS, File-Services, Active Directory-Services, Application-Services [DHCP, DNS, LDAP, VPN].
+  	<p class="ex">Ubuntu server: NFS Server, Wireless Access Point.
+  	<p class="ex">Server Monitoring: SCOM.
+  	<p class="ex">Scripting. bash, PowerShell. server-side automation tasks.
+  	<p class="ex">Technical Support: Service management based on impact and priority with cloud-based service management software. Support via email + phone, remote support.	
+  	<p class="ex">Network administration: Cisco routers + switches. LAN protocols and technologies: Ethernet 802.3 [802.1Q, QoS, 802.11] IPsec-based VPN, one-to-one-NAT, port-forwarding, access rules, proxy server. Wireshark, tcpdump, fiddler2. WAN protocols [OSPF, HDLC, EoMPLS]
+  	<p class="ex">Application support and infrastructure management: patching and deployment. bug fixing. liaising with vendor.
+  	<p class="ex">Backup and replication: Mainly Veeam Enterprise. SAS and Fibre Channel.
+  	<p class="ex">Database administration: Mostly implementing MySQL databases. Optimizing queries!</p>
   	<h3>Skills</h3>
-  	<p class="ex">Linux System administration    Ubuntu    CentOS    Wireshark    Cisco Technologies    Network administration</p>        	
+  	
   </body>
 </html>
