--- a/resume.html
+++ b/resume.html
@@ -69,6 +69,6 @@
   	<p class="ex">Backup and replication: Mainly Veeam Enterprise. SAS and Fibre Channel.
   	<p class="ex">Database administration: Mostly implementing MySQL databases. Optimizing queries!</p>
   	<h3>Skills</h3>
-  	
+  	<p class="ex">Linux System administration	asdfasdf	asdfasdf</p>					
   </body>
 </html>
