--- a/resume.html
+++ b/resume.html
@@ -43,6 +43,7 @@
     		margin-right: 150px;
     		margin-left: 150px;
 	}
+	p.wee {
 	IMG.displayed {
 		display: block;
     		margin-left: auto;
@@ -55,20 +56,20 @@
   </head>
   <body>
   	<h2>About me</h2>
-  	<p class="ex">Hello there! I am an adaptable and capable individual seeking a great job! I am highly organised and efficient in prioritising and accomplishing objectives with creativity, enthusiasm and humor. I enjoy solving complex problems and love collaborative environments (go team!). I have outstanding communication skills and can relay information in the appropriate format. I love learning stuff!</p>
+  	<p class="wee">Hello there! I am an adaptable and capable individual seeking a great job! I am highly organised and efficient in prioritising and accomplishing objectives with creativity, enthusiasm and humor. I enjoy solving complex problems and love collaborative environments (go team!). I have outstanding communication skills and can relay information in the appropriate format. I love learning stuff!</p>
   	<h2>Experience</h2>
   	<h3>Network and System Administrator</h3>
-  	<p class="ex">Duties:
-  	<p class="ex">Managing and implementing servers - IIS, File-Services, Active Directory-Services, Application-Services [DHCP, DNS, LDAP, VPN].
-  	<p class="ex">Ubuntu server: NFS Server, Wireless Access Point.
-  	<p class="ex">Server Monitoring: SCOM.
-  	<p class="ex">Scripting. bash, PowerShell. server-side automation tasks.
-  	<p class="ex">Technical Support: Service management based on impact and priority with cloud-based service management software. Support via email + phone, remote support.	
-  	<p class="ex">Network administration: Cisco routers + switches. LAN protocols and technologies: Ethernet 802.3 [802.1Q, QoS, 802.11] IPsec-based VPN, one-to-one-NAT, port-forwarding, access rules, proxy server. Wireshark, tcpdump, fiddler2. WAN protocols [OSPF, HDLC, EoMPLS]
-  	<p class="ex">Application support and infrastructure management: patching and deployment. bug fixing. liaising with vendor.
-  	<p class="ex">Backup and replication: Mainly Veeam Enterprise. SAS and Fibre Channel.
-  	<p class="ex">Database administration: Mostly implementing MySQL databases. Optimizing queries!</p>
+  	<p class="wee">Duties:
+  	<p class="wee">Managing and implementing servers - IIS, File-Services, Active Directory-Services, Application-Services [DHCP, DNS, LDAP, VPN].
+  	<br>Ubuntu server: NFS Server, Wireless Access Point.
+  	<br>Server Monitoring: SCOM.
+  	<br>Scripting. bash, PowerShell. server-side automation tasks.
+  	<br>Technical Support: Service management based on impact and priority with cloud-based service management software. Support via email + phone, remote support.	
+  	<br>Network administration: Cisco routers + switches. LAN protocols and technologies: Ethernet 802.3 [802.1Q, QoS, 802.11] IPsec-based VPN, one-to-one-NAT, port-forwarding, access rules, proxy server. Wireshark, tcpdump, fiddler2. WAN protocols [OSPF, HDLC, EoMPLS]
+  	<br>Application support and infrastructure management: patching and deployment. bug fixing. liaising with vendor.
+  	<br>Backup and replication: Mainly Veeam Enterprise. SAS and Fibre Channel.
+  	<br>Database administration: Mostly implementing MySQL databases. Optimizing queries!</p>
   	<h3>Skills</h3>
-  	<p class="ex">Linux System administration	asdfasdf	asdfasdf</p>					
+  	<p class="ex">Linux System administration    sdfgsdfgsfg    sfgsfgsfg</p>					
   </body>
 </html>
