--- a/resume.html
+++ b/resume.html
@@ -69,6 +69,6 @@
   	<br>Backup and replication: Mainly Veeam Enterprise. SAS and Fibre Channel.
   	<br>Database administration: Mostly implementing MySQL databases. Optimizing queries!</p>
   	<h3>Skills</h3>
-  	<p class="ex">Linux System administration    sdfgsdfgsfg    sfgsfgsfg</p>					
+  	<p class="wee">Linux System administration  |  sdfgsdfgsfg  |  sfgsfgsfg</p>					
   </body>
 </html>
