--- a/resume.html
+++ b/resume.html
@@ -69,6 +69,6 @@
   	<br>Backup and replication: Mainly Veeam Enterprise. SAS and Fibre Channel.
   	<br>Database administration: Mostly implementing MySQL databases. Optimizing queries!</p>
   	<h3>Skills</h3>
-  	<p class="wee">Linux System administration  |  sdfgsdfgsfg  |  sfgsfgsfg</p>					
+  	<p class="wee">Linux System administration  |  Ubuntu  |  CentOS  |  Wireshark  |  Cisco Technologies  |  Cisco routers  |  Network administration  |  troubleshooting-methodologies  |  DNS  |  Python  |  shell scripting  |  ESXi  |  VMware  |  JavaScript  |  MySQL  |  PostgreSQL  |  Web technologies</p>					
   </body>
 </html>
