--- a/resume.html
+++ b/resume.html
@@ -71,5 +71,10 @@
   	<h3>Skills</h3>
   	<p class="wee">Linux System administration  |  Ubuntu  |  CentOS  |  Wireshark  |  Cisco Technologies  |  Cisco routers  |  Network administration
   	<br>troubleshooting-methodologies  |  DNS  |  Python  |  shell scripting  |  ESXi  |  VMware  |  JavaScript  |  MySQL  |  PostgreSQL  |  Web technologies</p>					
+  	<h2>Hobbies and stuff</h2>
+  	<p class="wee">Arduino projects!
+  	<br>Python projects and hacking on http://www.checkio.org/
+  	<br>I attend a community based trading card game most Friday nights to partake in Magic the Gathering tournaments.
+  	<br>Pizza</p>
   </body>
 </html>
