--- a/resume.html
+++ b/resume.html
@@ -73,7 +73,7 @@
   	<br>troubleshooting-methodologies  |  DNS  |  Python  |  shell scripting  |  ESXi  |  VMware  |  JavaScript  |  MySQL  |  PostgreSQL  |  Web technologies</p>					
   	<h2>Hobbies and stuff</h2>
   	<p class="wee">Arduino projects!
-  	<br>Python projects and hacking on http://www.checkio.org/
+  	<br>Python projects and hacking on<a href="http://www.checkio.org/">checkio.org</a>
   	<br>I attend a community based trading card game most Friday nights to partake in Magic the Gathering tournaments.
   	<br>Pizza</p>
   </body>
