--- a/resume.html
+++ b/resume.html
@@ -43,6 +43,11 @@
     		margin-right: 150px;
     		margin-left: 150px;
 	}
+	p.nut {
+		margin-top: 16px;
+    		margin-bottom: 16px;
+		text-align: center;
+	}
 	IMG.displayed {
 		display: block;
     		margin-left: auto;
@@ -73,8 +78,9 @@
   	<br>troubleshooting-methodologies  |  DNS  |  Python  |  shell scripting  |  ESXi  |  VMware  |  JavaScript  |  MySQL  |  PostgreSQL  |  Web technologies</p>					
   	<h2>Hobbies and stuff</h2>
   	<p class="wee">Arduino projects!
-  	<br>Python projects and hacking on<a href="http://www.checkio.org/">checkio.org</a>
+  	<br>Python projects and hacking on <a href="http://www.checkio.org/">CheckiO</a>
   	<br>I attend a community based trading card game most Friday nights to partake in Magic the Gathering tournaments.
   	<br>Pizza</p>
+  	<p class="nut">thanks for reading...</p>
   </body>
 </html>
