--- a/resume.html
+++ b/resume.html
@@ -83,7 +83,11 @@
   	<br>Pizza</p>
   	<br>
   	<br>
-  	<p class="wee"><a href="https://ie.linkedin.com/pub/byron-grogan/97/2b/42">LinkedIn</a></p>
+  	<p class="nut"><a href="https://ie.linkedin.com/pub/byron-grogan/97/2b/42">LinkedIn</a></p>
+  	<br>
+  	<br>
+  	<br>
+  	<br>
   	<br>
   	<br>
   	<p class="nut">thanks for reading...</p>
