--- a/resume.html
+++ b/resume.html
@@ -90,6 +90,6 @@
   	<br>
   	<br>
   	<br>
-  	<p class="nut">thanks for reading...</p>
+  	<p class="nut">Thanks for reading!</p>
   </body>
 </html>
