--- a/resume.html
+++ b/resume.html
@@ -63,6 +63,7 @@
   	<p class="wee">Hello there! I am an adaptable and capable individual seeking a great job! I am highly organised and efficient in prioritising and accomplishing objectives with creativity, enthusiasm and humor. I enjoy solving complex problems and love collaborative environments (go team!). I have outstanding communication skills and can relay information in the appropriate format. I love learning stuff!</p>
   	<h2>Experience</h2>
   	<h3>Network and System Administrator</h3>
+  	<p class="wee">Atlas AMEX
   	<p class="wee">Duties:
   	<p class="wee">Managing and implementing servers - IIS, File-Services, Active Directory-Services, Application-Services [DHCP, DNS, LDAP, VPN].
   	<br>Ubuntu server: NFS Server, Wireless Access Point.
