--- a/resume.html
+++ b/resume.html
@@ -81,7 +81,7 @@
   	<p class="wee">Arduino projects!
   	<br>Python projects and hacking on <a href="http://www.checkio.org/">CheckiO</a>
   	<br>I attend a community based trading card game most Friday nights to partake in Magic the Gathering tournaments.
-  	<br>Pizza</p>
+  	<br>Pizza, wine, craft beer and COFFEE!</p>
   	<br>
   	<br>
   	<p class="nut"><a href="https://ie.linkedin.com/pub/byron-grogan/97/2b/42">LinkedIn</a></p>
