--- a/index.html
+++ b/index.html
@@ -1,20 +1,32 @@
 <html>
   <style>  h1 {
-	font-family: 'Lucida Console', 'Lucida Sans Typewriter', monaco, 'Bitstream Vera Sans Mono', monospace;
-	font-size: 24px;
-	font-style: normal;
-	font-variant: small-caps;
-	font-weight: 500;
-	line-height: 36px;
+		font-family: 'Lucida Console', 'Lucida Sans Typewriter', monaco, 'Bitstream Vera Sans Mono', monospace;
+		font-size: 44px;
+		font-style: normal;
+		font-variant: small-caps;
+		font-weight: 500;
+		line-height: 36px;
+		text-align: center;
+	}
+	h2 {
+		font-family: 'Lucida Console', 'Lucida Sans Typewriter', monaco, 'Bitstream Vera Sans Mono', monospace;
+		font-size: 24px;
+		font-style: normal;
+		font-variant: small-caps;
+		font-weight: 500;
+		line-height: 16px;
+		text-align: center;
+	}
+	IMG.displayed {
+		display: block;
+    		margin-left: auto;
+    		margin-right: auto
 	}
   </style>
-    <head><center><h1>wishing humans a safe journey</h1></center></head> <!-- wishing humans a safe journey -->
-  <style>
-	body { 
-    	background-image: url('https://photos-1.dropbox.com/t/2/AADfLN4seiYSRH1WKqA4E_ZA8d61gcnstkReW-Cwas8VeQ/12/348056683/jpeg/32x32/1/_/1/2/norm.jpg/EK72-9wCGP0cIAcoBw/H9pYlmRp8Cet1lc8Yim6lnnCZXr-zxVf6no0VU0OrZI?size=1024x768&size_mode=2');
-    	background-repeat: no-repeat;
-    	background-attachment: fixed;
-    	background-position: center; 
-	}
-  </style>
+    <head>
+    	<IMG class="displayed" src="https://www.dropbox.com/s/0zltttfeimndrsh/sit.jpg?dl=0?raw=2" alt="sit">
+    	<h1>404</h1></head> <!-- wishing humans a safe journey -->
+    	<body>
+    		<h2>Oops! no trespassing</h2>
+    	</body>
 </html>
