--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 	}
   </style>
     <head>
-    	<IMG class="displayed" src="https://www.dropbox.com/s/0zltttfeimndrsh/sit.jpg?dl=0?raw=2" alt="sit">
+    	<IMG class="displayed" src="https://photos-2.dropbox.com/t/2/AAB84-5RV7zugKTffUbjKXqdxupgbc0o_uOeR41WERdu0Q/12/348056683/jpeg/32x32/1/_/1/2/sit.jpg?raw=1" alt="sit">
     	<h1>404</h1></head> <!-- wishing humans a safe journey -->
     	<body>
     		<h2>Oops! no trespassing</h2>
