--- a/index.html
+++ b/index.html
@@ -27,6 +27,6 @@
     	<IMG class="displayed" src="https://www.dropbox.com/s/0zltttfeimndrsh/sit.jpg?raw=1" alt="sit">
     	<h1>404</h1></head> <!-- wishing humans a safe journey -->
     	<body>
-    		<h2>Oops! no trespassing</h2>
+    		<h2>Ooops! no trespassing</h2>
     	</body>
 </html>
