--- a/resume.html
+++ b/resume.html
@@ -75,8 +75,8 @@
   	<br>Backup and replication: Mainly Veeam Enterprise. SAS and Fibre Channel.
   	<br>Database administration: Mostly implementing MySQL databases. Optimizing queries!</p>
   	<h3>Skills</h3>
-  	<p class="wee">Linux System administration  |  Ubuntu  |  CentOS  |  OS X  |  Wireshark  |  Cisco Technologies  |  Cisco routers  |  Network administration
-  	<br>troubleshooting-methodologies  |  DNS  |  Python  |  shell scripting  |  ESXi  |  VMware  |  JavaScript  |  MySQL  |  PostgreSQL  |  Web technologies</p>					
+  	<p class="wee">Linux System administration, Ubuntu, CentOS, OS X, Wireshark, Cisco Technologies, Cisco routers, Network administration,
+  	<br>troubleshooting-methodologies, DNS, Python, shell scripting, ESXi, VMware, JavaScript, MySQL, PostgreSQL, Web technologies</p>					
   	<h2>Hobbies and stuff</h2>
   	<p class="wee">Arduino projects!
   	<br>Python projects and hacking on <a href="http://www.checkio.org/">CheckiO</a>
