--- a/resume.html
+++ b/resume.html
@@ -89,14 +89,12 @@
   	<br>Pizza, wine, craft beer and COFFEE!</p>
   	<br>
   	<br>
-  	<a href="https://ie.linkedin.com/pub/byron-grogan/97/2b/42" alt="logo">
-  		<IMG class="logo" src="http://cdn.mysitemyway.com/etc-mysitemyway/icons/legacy-previews/icons/magic-marker-icons-social-media-logos/116070-magic-marker-icon-social-media-logos-linkedin-logo-square2.png" alt="logo" style=height="42" width="42">
-  			</a>
-  	<p class="nut"><a href="https://ie.linkedin.com/pub/byron-grogan/97/2b/42">LinkedIn</a></p>
-  	<!-- <a href="default.asp">
-  		<img src="smiley.gif" alt="HTML tutorial" style="width:42px;height:42px;border:0">
-		</a>
-	-->	
+  		<IMG class="logo" src="http://cdn.mysitemyway.com/etc-mysitemyway/icons/legacy-previews/icons/magic-marker-icons-social-media-logos/116070-magic-marker-icon-social-media-logos-linkedin-logo-square2.png" alt="logo" style=height="42" width="42"><a href="https://ie.linkedin.com/pub/byron-grogan/97/2b/42"></a>
+  		<p class="nut"><a href="https://ie.linkedin.com/pub/byron-grogan/97/2b/42">LinkedIn</a></p>
+  		<!-- <a href="default.asp">
+  			<img src="smiley.gif" alt="HTML tutorial" style="width:42px;height:42px;border:0">
+			</a>
+		-->	
   	<br>
   	<br>
   	<br>
