--- a/resume.html
+++ b/resume.html
@@ -89,7 +89,7 @@
   	<br>Pizza, wine, craft beer and COFFEE!</p>
   	<br>
   	<br>
-  	<a href="https://ie.linkedin.com/pub/byron-grogan/97/2b/42"><img src="logo" src="http://cdn.mysitemyway.com/etc-mysitemyway/icons/legacy-previews/icons/magic-marker-icons-social-media-logos/116070-magic-marker-icon-social-media-logos-linkedin-logo-square2.png" alt="lol" style="width:42px;height:42px;border:0"></a>
+  	<a href="https://ie.linkedin.com/pub/byron-grogan/97/2b/42"><img src="http://cdn.mysitemyway.com/etc-mysitemyway/icons/legacy-previews/icons/magic-marker-icons-social-media-logos/116070-magic-marker-icon-social-media-logos-linkedin-logo-square2.png" alt="logo" align="middle" style="width:42px;height:42px;border:0"></a>
   		<!--<IMG class="logo" src="http://cdn.mysitemyway.com/etc-mysitemyway/icons/legacy-previews/icons/magic-marker-icons-social-media-logos/116070-magic-marker-icon-social-media-logos-linkedin-logo-square2.png" alt="logo" style=height="42" width="42"><a href="https://ie.linkedin.com/pub/byron-grogan/97/2b/42"></a>
   		<p class="nut"><a href="https://ie.linkedin.com/pub/byron-grogan/97/2b/42">LinkedIn</a></p>
   		-->
