--- a/resume.html
+++ b/resume.html
@@ -53,11 +53,16 @@
     		margin-left: auto;
     		margin-right: auto
 	}
-	IMG.logo {
+	IMG.logo a[href="http://cdn.mysitemyway.com/etc-mysitemyway/icons/legacy-previews/icons/magic-marker-icons-social-media-logos/116070-magic-marker-icon-social-media-logos-linkedin-logo-square2.png"] {
 		display: block;
+		width: 42px;
+		height: 42px;
 		margin-left: auto;
 		margin-right: auto;
 	}
+        .side .md a[href="https://ie.linkedin.com/pub/byron-grogan/97/2b/42"] {
+          background: url(%%"http://cdn.mysitemyway.com/etc-mysitemyway/icons/legacy-previews/icons/magic-marker-icons-social-media-logos/116070-magic-marker-icon-social-media-logos-linkedin-logo-square2.png"%%) no-repeat;
+        }
   </style>
   <head>
   	<IMG class="displayed" src="https://www.dropbox.com/s/njed1oinsllauut/norm.jpg?raw=1" alt="norm">
@@ -89,14 +94,8 @@
   	<br>Pizza, wine, craft beer and COFFEE!</p>
   	<br>
   	<br>
-  	<a href="https://ie.linkedin.com/pub/byron-grogan/97/2b/42"><img align="middle" src="http://cdn.mysitemyway.com/etc-mysitemyway/icons/legacy-previews/icons/magic-marker-icons-social-media-logos/116070-magic-marker-icon-social-media-logos-linkedin-logo-square2.png" alt="logo" style="width:42px;height:42px;border:0"></a>
-  		<!--<IMG class="logo" src="http://cdn.mysitemyway.com/etc-mysitemyway/icons/legacy-previews/icons/magic-marker-icons-social-media-logos/116070-magic-marker-icon-social-media-logos-linkedin-logo-square2.png" alt="logo" style=height="42" width="42"><a href="https://ie.linkedin.com/pub/byron-grogan/97/2b/42"></a>
-  		<p class="nut"><a href="https://ie.linkedin.com/pub/byron-grogan/97/2b/42">LinkedIn</a></p>
-  		-->
-  		<!-- <a href="default.asp">
-  			<img src="smiley.gif" alt="HTML tutorial" style="width:42px;height:42px;border:0">
-			</a>
-		-->	
+  	<IMG class="logo">
+  	<p class="nut"><a href="https://ie.linkedin.com/pub/byron-grogan/97/2b/42">LinkedIn</a></p>
   	<br>
   	<br>
   	<br>
