--- a/resume.html
+++ b/resume.html
@@ -53,16 +53,11 @@
     		margin-left: auto;
     		margin-right: auto
 	}
-	IMG.logo a[href="http://cdn.mysitemyway.com/etc-mysitemyway/icons/legacy-previews/icons/magic-marker-icons-social-media-logos/116070-magic-marker-icon-social-media-logos-linkedin-logo-square2.png"] {
+	IMG.logo {
 		display: block;
-		width: 42px;
-		height: 42px;
 		margin-left: auto;
 		margin-right: auto;
 	}
-        .side .md a[href="https://ie.linkedin.com/pub/byron-grogan/97/2b/42"] {
-          background: url(%%"http://cdn.mysitemyway.com/etc-mysitemyway/icons/legacy-previews/icons/magic-marker-icons-social-media-logos/116070-magic-marker-icon-social-media-logos-linkedin-logo-square2.png"%%) no-repeat;
-        }
   </style>
   <head>
   	<IMG class="displayed" src="https://www.dropbox.com/s/njed1oinsllauut/norm.jpg?raw=1" alt="norm">
@@ -94,7 +89,7 @@
   	<br>Pizza, wine, craft beer and COFFEE!</p>
   	<br>
   	<br>
-  	<IMG class="logo" src="http://cdn.mysitemyway.com/etc-mysitemyway/icons/legacy-previews/icons/magic-marker-icons-social-media-logos/116070-magic-marker-icon-social-media-logos-linkedin-logo-square2.png">
+  	<IMG class="logo" src="http://cdn.mysitemyway.com/etc-mysitemyway/icons/legacy-previews/icons/magic-marker-icons-social-media-logos/116070-magic-marker-icon-social-media-logos-linkedin-logo-square2.png" height="42" width="42">
   	<p class="nut"><a href="https://ie.linkedin.com/pub/byron-grogan/97/2b/42">LinkedIn</a></p>
   	<br>
   	<br>
