--- a/resume.html
+++ b/resume.html
@@ -94,8 +94,7 @@
   	      <br>Pizza, wine, craft beer and COFFEE!</p>
  	      <br>
   	      <br>
-  	    <IMG class="logo" src="http://cdn.mysitemyway.com/etc-mysitemyway/icons/legacy-previews/icons/magic-marker-icons-social-
-  	    media-logos/116070-magic-marker-icon-social-media-logos-linkedin-logo-square2.png" height="42" width="42">
+  	    <IMG class="logo" src="http://cdn.mysitemyway.com/etc-mysitemyway/icons/legacy-previews/icons/magic-marker-icons-social-media-logos/116070-magic-marker-icon-social-media-logos-linkedin-logo-square2.png" height="42" width="42">
   	      <p class="nut"><a href="https://ie.linkedin.com/pub/byron-grogan/97/2b/42">LinkedIn</a></p>
    	      <br>
   	      <br>
