--- a/resume.html
+++ b/resume.html
@@ -1,107 +1,59 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
-	<style>  
-  	h1 {
-		font-family: 'Lucida Console', 'Lucida Sans Typewriter', monaco, 'Bitstream Vera Sans Mono', monospace;
-		font-size: 24px;
-		font-style: normal;
-		font-variant: small-caps;
-		font-weight: 500;
-		line-height: 136px;
-		text-align: center;
-	}
-	h2 {
-		font-family: 'Lucida Console', 'Lucida Sans Typewriter', monaco, 'Bitstream Vera Sans Mono', monospace;
-		font-size: 18px;
-		font-style: normal;
-		font-variant: small-caps;
-		font-weight: 500;
-		line-height: 26px;
-		margin-right: 150px;
-		margin-left: 150px;
-	}
-	h3 {
-		font-family: 'Lucida Console', 'Lucida Sans Typewriter', monaco, 'Bitstream Vera Sans Mono', monospace;
-		font-size: 16px;
-		font-style: normal;
-		font-variant: small-caps;
-		font-weight: 500;
-		line-height: 26px;
-		margin-right: 150px;
-		margin-left: 150px;
-	}
-	p {
-		font-family: 'Lucida Console', 'Lucida Sans Typewriter', monaco, 'Bitstream Vera Sans Mono', monospace;
-		font-size: 12px;
-		font-style: normal;
-		font-variant: normal;
-		font-weight: 500;
-		line-height: 16px;
-	}
-	p.wee {
-		margin-top: 16px;
-    		margin-bottom: 16px;
-    		margin-right: 150px;
-    		margin-left: 150px;
-	}
-	p.nut {
-		margin-top: 16px;
-    		margin-bottom: 16px;
-		text-align: center;
-	}
-	IMG.displayed {
-		display: block;
-    		margin-left: auto;
-    		margin-right: auto
-	}
-	IMG.logo {
-		display: block;
-		margin-left: auto;
-		margin-right: auto;
-	}
-	</style>
-	  <head>
-	    <IMG class="displayed" src="https://www.dropbox.com/s/njed1oinsllauut/norm.jpg?raw=1" alt="norm">
-	    <h1>BYRON GROGAN</h1>
-	  </head>
-          <body>
-  	    <h2>About me</h2>
-  	      <p class="wee">Hello there! I am an adaptable and capable individual seeking a great job! 
-  	      I am highly organised and efficient in prioritising and accomplishing objectives with creativity, 
-  	      enthusiasm and humor. I enjoy solving complex problems and love collaborative environments (go team!). 
-  	      I have outstanding communication skills and can relay information in the appropriate format. 
-  	      I love learning stuff!</p>
-  	    <h2>Experience</h2>
-  	    <h3>Network and System Administrator</h3>
-  	      <p class="wee">Atlas AMEX
-  	      <p class="wee">Duties:
-              <p class="wee">Managing and implementing servers - IIS, File-Services, Active Directory-Services, Application-Services [DHCP, DNS, LDAP, VPN].
-	      <br>Ubuntu server: NFS Server, Wireless Access Point.
-	      <br>Server Monitoring: SCOM.
-	      <br>Scripting. bash, PowerShell. server-side automation tasks.
- 	      <br>Technical Support: Service management based on impact and priority with cloud-based service management software. Support via email + phone, remote support.	
-  	      <br>Network administration: Cisco routers + switches. LAN protocols and technologies: Ethernet 802.3 [802.1Q, QoS, 802.11] IPsec-based VPN, one-to-one-NAT, port-forwarding, access rules, proxy server. Wireshark, tcpdump, fiddler2. WAN protocols [OSPF, HDLC, EoMPLS]
-  	      <br>Application support and infrastructure management: patching and deployment. bug fixing. liaising with vendor.
-  	      <br>Backup and replication: Mainly Veeam Enterprise. SAS and Fibre Channel.
-  	      <br>Database administration: Mostly implementing MySQL databases. Optimizing queries!</p>
-  	    <h3>Skills</h3>
-  	      <p class="wee">Linux System administration, Ubuntu, CentOS, OS X, Wireshark, Cisco Technologies, Cisco routers, Network administration,
-  	      <br>troubleshooting-methodologies, DNS, Python, shell scripting, ESXi, VMware, JavaScript, MySQL, PostgreSQL, Web technologies</p>					
-  	    <h2>Hobbies and stuff</h2>
-  	      <p class="wee">Arduino projects!
-  	      <br>Python projects and hacking on <a href="http://www.checkio.org/">CheckiO</a>
-  	      <br>I attend a community based trading card game most Friday nights to partake in Magic the Gathering tournaments.
-  	      <br>Pizza, wine, craft beer and COFFEE!</p>
- 	      <br>
-  	      <br>
-  	    <IMG class="logo" src="http://cdn.mysitemyway.com/etc-mysitemyway/icons/legacy-previews/icons/magic-marker-icons-social-media-logos/116070-magic-marker-icon-social-media-logos-linkedin-logo-square2.png" height="42" width="42">
-  	      <p class="nut"><a href="https://ie.linkedin.com/pub/byron-grogan/97/2b/42">LinkedIn</a></p>
-   	      <br>
-  	      <br>
-  	      <br>
-  	      <br>
-  	      <br>
-  	      <br>
-	      <p class="nut">Thanks for reading!</p>
-          </body>
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="chrome=1">
+    <title>Resume</title>
+
+    <link rel="stylesheet" href="stylesheets/styles.css">
+    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
+    <meta name="viewport" content="width=device-width">
+    <!--[if lt IE 9]>
+    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
+  </head>
+  <body>
+    <div class="wrapper">
+      <header>
+        <p>Byron Grogan</p>
+        <p class="view"><a href="https://github.com/meowssir">View my GitHub </a></p>
+        <img src="https://www.dropbox.com/s/njed1oinsllauut/norm.jpg?raw=1">
+          <pre><code>def answer(question):
+          answer = god.secret_sauce(question)
+          return answer
+          
+>>> answer(life)
+42
+</code></pre>
+      </header>
+      <section>
+        <h2>About Me</h2>
+        <p>Hello there! I am an adaptable and capable individual seeking a great job! 
+          <br>I am highly organised and efficient in prioritising and accomplishing objectives with creativity, 
+          enthusiasm and humor. I enjoy solving complex problems and love collaborative environments <tt>go team!</tt>. 
+          I have outstanding communication skills and can relay information in the appropriate format. 
+          <strong><small>I love learning stuff!</small></strong></p>
+        <h3>Experience</h3>
+        <ol>
+          System Administrator
+        </ol>
+        <p><small>---</small></p>
+        <h3>Skills</h3>
+        <ol>
+          <tt>Linux System Administration, troubleshooting, CentOS, Ubuntu server, scripting, Python, Bash, networking protocols, DNS, Cisco CLI, JSON, MongoDB, MySQL, Node.js, Git, bottle, Django, JavaScript, HTML</tt></p>
+        </ol>
+        <h3>Projects</h3>
+        <p>wrote a simple web application using the bottle micro-framework and <tt>re</tt> module in Python</p>
+        <ul>
+        <li><a href="https://tilden.herokuapp.com">App <strong>Heroku</strong></a></li>
+        </ul>
+        <h3>Interests</h3>
+        <p>Pizza, wine, craft beer and COFFEE! I enjoy sci-fi novels, authors; Charles Stross, Neal Stephenson, Jeff VanderMeer, Orson Scott Card <small>to name a few.</small> Science and Astronomy <small>I often read </small><a href="https://www.quantamagazine.org/">Quanta Magazine </a> Magic The Gathering, playing video games. <small>when I have time!</small>.</p>
+      </section>
+      <footer>
+        <small>Thanks for reading</small>
+      </footer>
+    </div>
+    <script src="javascripts/scale.fix.js"></script>
+  </body>
 </html>
