--- a/resume.html
+++ b/resume.html
@@ -48,7 +48,7 @@
         <li><a href="https://tilden.herokuapp.com">App <strong>Heroku</strong></a></li>
         </ul>
         <h3>Interests</h3>
-        <p>Pizza, wine, craft beer and COFFEE! I enjoy sci-fi novels, authors; Charles Stross, Neal Stephenson, Jeff VanderMeer, Orson Scott Card <small>to name a few.</small> Science and Astronomy <small>I often read </small><a href="https://www.quantamagazine.org/">Quanta Magazine </a> Magic The Gathering, playing video games. <small>when I have time!</small>.</p>
+        <p>Pizza, wine, craft beer and COFFEE! I enjoy sci-fi novels, authors; Charles Stross, Neal Stephenson, Jeff VanderMeer, Orson Scott Card <small>to name a few.</small> Science and Astronomy <small>I often read </small><a href="https://www.quantamagazine.org/">Quanta Magazine </a>, Magic The Gathering, playing video games. <small>when I have time!</small>.</p>
       </section>
       <footer>
         <small>Thanks for reading</small>
