--- a/resume.html
+++ b/resume.html
@@ -43,7 +43,7 @@
           <tt>Linux System Administration, troubleshooting, CentOS, Ubuntu server, scripting, Python, Bash, networking protocols, DNS, Cisco CLI, JSON, MongoDB, MySQL, Node.js, Git, bottle, Django, JavaScript, HTML</tt></p>
         </ol>
         <h3>Projects</h3>
-        <p>wrote a simple web application using the bottle micro-framework and <tt>re</tt> module in Python</p>
+        <p>A simple web application using the bottle micro-framework and <tt>re</tt> module in Python</p>
         <ul>
         <li><a href="https://tilden.herokuapp.com">App <strong>Heroku</strong></a></li>
         </ul>
