--- a/resume.html
+++ b/resume.html
@@ -48,9 +48,11 @@
         <li><a href="https://tilden.herokuapp.com">App <strong>Heroku</strong></a></li>
         </ul>
         <h3>Interests</h3>
-        <p>Pizza, wine, craft beer and COFFEE! I enjoy sci-fi novels, authors; Charles Stross, Neal Stephenson, Jeff VanderMeer, Orson Scott Card <small>to name a few.</small> 
+        <p>Pizza, wine, craft beer and COFFEE!
+        <br>I enjoy sci-fi novels! authors include: Charles Stross, Neal Stephenson, Jeff VanderMeer, Orson Scott Card <small>to name a few.</small> 
         <br>Science and stuff <small>I often read </small><a href="https://www.quantamagazine.org/">Quanta Magazine</a>, 
-        <br><small>and</small> <a href="http://worldbuilding.stackexchange.com/">Worldbuilding beta</a>, Magic The Gathering, playing video games. <small>when I have time!</small>.</p>
+        <br><small>and</small> <a href="http://worldbuilding.stackexchange.com/">Worldbuilding beta</a>, 
+        <br>Magic The Gathering, playing video games. <small>when I have time!</small>.</p>
       </section>
       <footer>
         <small>Thanks for reading</small>
