--- a/resume.html
+++ b/resume.html
@@ -51,7 +51,7 @@
         <p>Pizza, wine, craft beer and COFFEE!
         <br>I enjoy sci-fi novels! <small>authors include:</small> Charles Stross, Neal Stephenson, Jeff VanderMeer, Orson Scott Card <small>to name a few.</small> 
         <br>Science and stuff <small>I often read </small><a href="https://www.quantamagazine.org/">Quanta Magazine</a>, 
-        <br><small>and</small> <a href="http://worldbuilding.stackexchange.com/">Worldbuilding beta</a> <small>Worldbuilding Stack Exchange is a question and answer site for writers/artists using science, geography and culture to construct imaginary worlds and settings. It's 100% free, no registration required.</small> 
+        <br><small>and</small> <a href="http://worldbuilding.stackexchange.com/">Worldbuilding beta</a> <small>Worldbuilding Stack Exchange is a question and answer site for writers/artists using science, geography and culture to construct imaginary worlds and settings.</small> 
         <br>Magic The Gathering, playing video games. <small>when I have time!</small>.</p>
       </section>
       <footer>
