--- a/resume.html
+++ b/resume.html
@@ -40,7 +40,7 @@
         <p><small>---</small></p>
         <h3>Skills</h3>
         <ol>
-          <tt>Linux System Administration, troubleshooting, CentOS, Ubuntu server, scripting, Python, Bash, networking protocols, DNS, Cisco CLI, JSON, MongoDB, MySQL, Node.js, Git, bottle, Django, JavaScript, HTML</tt></p>
+          <tt>Linux System Administration, troubleshooting, Network Administration, CentOS, Ubuntu server, Debian, scripting, Python, Bash, networking protocols, DNS, Cisco CLI, JSON, MongoDB, MySQL, Node.js, Express, Git, Heroku, bottle, Django, JavaScript, HTML</tt></p>
         </ol>
         <h3>Projects</h3>
         <p>A simple web application using the bottle micro-framework and <tt>re</tt> module in Python</p>
