--- a/index.html
+++ b/index.html
@@ -1,33 +1,64 @@
 <!DOCTYPE html>
 <html>
-  <style>  h1 {
-		font-family: 'Lucida Console', 'Lucida Sans Typewriter', monaco, 'Bitstream Vera Sans Mono', monospace;
-		font-size: 44px;
-		font-style: normal;
-		font-variant: small-caps;
-		font-weight: 500;
-		line-height: 36px;
-		text-align: center;
-	}
-	h2 {
-		font-family: 'Lucida Console', 'Lucida Sans Typewriter', monaco, 'Bitstream Vera Sans Mono', monospace;
-		font-size: 24px;
-		font-style: normal;
-		font-variant: small-caps;
-		font-weight: 500;
-		line-height: 16px;
-		text-align: center;
-	}
-	IMG.displayed {
-		display: block;
-    		margin-left: auto;
-    		margin-right: auto
-	}
-  </style>
-    <head>
-    	<IMG class="displayed" src="https://www.dropbox.com/s/0zltttfeimndrsh/sit.jpg?raw=1" alt="sit">
-    	<h1>401</h1></head> <!-- wishing humans a safe journey -->
-    	<body>
-    		<h2>Ooops! no trespassing</h2>
-    	</body>
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="chrome=1">
+    <title>About Me</title>
+
+    <link rel="stylesheet" href="stylesheets/styles.css">
+    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
+    <meta name="viewport" content="width=device-width">
+    <!--[if lt IE 9]>
+    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
+  </head>
+  <body>
+    <div class="wrapper">
+      <header>
+        <p>Byron Grogan</p>
+        <github><p class="view"><a href="https://github.com/meowssir">View my GitHub </a></p></github>
+        <img src="https://www.dropbox.com/s/njed1oinsllauut/norm.jpg?raw=1">
+          <pre><code>def answer(question):
+          answer = god.secret_sauce(question)
+          return answer
+          
+>>> answer(life)
+42
+</code></pre>
+      </header>
+      <section>
+        <h2>About Me</h2>
+        <p>Hello there, my name is <tt>...</tt>
+          <strong><small>I love learning stuff!</small></strong>
+        <ol>...</ol>
+        <tt>such as:</tt>
+        <small>Python, web frameworks, I dabble in Node.js. NoSQL, networking and various protocols.</small>
+        <br><tt>GET https://api.meetup.com/dashboard</tt>
+        <br>...
+        <br><small><tt>HTTP/1.1 200 success
+"group": {
+"join_mode": "open",
+"created": 1428592426000,
+"name": "Dublin Node.js Meetup",
+"group_lon": -6.25,
+"id": 18540219,
+"urlname": "Dublin-Node-js-Meetup",
+"group_lat": 53.33000183105469,
+"who": "Noders"
+},
+<tt></small>
+        <br>
+        <br>I work at <strong>MongoDB</strong> as an engineer.
+          <strong><small>I like things!</small></strong>
+        <ol>...</ol>
+        <tt>such as:</tt>
+        <small>Craft Beer, science, Meetups, sci-fi novels.</small>
+        </p>
+      </section>
+      <footer>
+        <small>Thanks for reading</small>
+      </footer>
+    </div>
+    <script src="javascripts/scale.fix.js"></script>
+  </body>
 </html>
