--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 >>> answer(life)
 42
 </code></pre>
+      <script src="https://gist.github.com/meowssir/bf6222770146fa84dbe6.js"></script>
       </header>
       <section>
         <h2>About Me</h2>
