--- a/index.html
+++ b/index.html
@@ -32,27 +32,23 @@
           <strong><small>I love learning stuff!</small></strong>
         <ol>...</ol>
         <tt>such as:</tt>
-        <small>Python, web frameworks, I dabble in Node.js. NoSQL, networking and various protocols.</small>
+        <small>stuff...</small>
         <br><tt>GET https://api.meetup.com/dashboard</tt>
         <br>...
         <br><small><tt>HTTP/1.1 200 success
 "group": {
 "join_mode": "open",
 "created": 1428592426000,
-"name": "Dublin Node.js Meetup",
+"name": "test",
 "group_lon": -6.25,
 "id": 18540219,
-"urlname": "Dublin-Node-js-Meetup",
 "group_lat": 53.33000183105469,
-"who": "Noders"
 },
 <tt></small>
         <br>
-        <br>I work at <strong>MongoDB</strong> as an engineer.
           <strong><small>I like things!</small></strong>
         <ol>...</ol>
         <tt>such as:</tt>
-        <small>Craft Beer, science, Meetups, sci-fi novels.</small>
         </p>
       </section>
       <footer>
